--- a/components/hotel-module/bundle2/src/main/res/layout/activity_pager_view.xml
+++ b/components/hotel-module/bundle2/src/main/res/layout/activity_pager_view.xml
@@ -1,28 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
+    <LinearLayout
 
-    <jamesfchen.widget.kk.PagerView
-        android:id="@+id/pv_horizontal"
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:pv_orientation="horizontal"
-        tools:background="@color/colorAccent"
-        tools:layout_height="200dp"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <jamesfchen.widget.kk.PagerView
-        android:id="@+id/pv_vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:pv_orientation="vertical"
-        tools:background="@color/apricot"
-        tools:layout_height="200dp"/>
 
-</LinearLayout>
+        <jamesfchen.widget.kk.PagerView
+            android:id="@+id/pv_horizontal1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:background="@color/colorAccent"
+            app:pv_orientation="horizontal" />
+
+        <Button
+            android:id="@+id/bt_remove_all"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="remove all"
+            android:textAllCaps="false" />
+
+        <jamesfchen.widget.kk.PagerView
+            android:id="@+id/pv_horizontal2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:background="@color/colorAccent"
+            app:pv_orientation="horizontal" />
+
+        <jamesfchen.widget.kk.PagerView
+            android:id="@+id/pv_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/apricot"
+            app:pv_orientation="vertical" />
+
+    </LinearLayout>
+</androidx.core.widget.NestedScrollView>
