--- a/components/hotel-module/bundle2/src/main/res/layout/activity_pager_view.xml
+++ b/components/hotel-module/bundle2/src/main/res/layout/activity_pager_view.xml
@@ -1,35 +1,39 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<?xml version="1.0" encoding="utf-8"?><!--<androidx.core.widget.NestedScrollView-->
+<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent">-->
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="垂直布局，水平联动"
+            android:layout_height="wrap_content"/>
         <jamesfchen.widget.kk.PagerView
             android:id="@+id/pv_horizontal1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
             android:background="@color/colorAccent"
-            app:pv_orientation="horizontal" />
-
+            android:orientation="vertical"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="水平布局，垂直联动"
+            android:layout_height="wrap_content"/>
         <jamesfchen.widget.kk.PagerView
             android:id="@+id/pv_vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="400dp"
-            android:background="@color/colorAccent"
-            app:pv_orientation="vertical" />
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_aa"
             android:layout_width="match_parent"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:layout_height="300dp"/>
+            android:layout_height="300dp"
+            android:background="@color/colorAccent"
+            android:orientation="horizontal"
+            />
+
         <Button
             android:id="@+id/bt_remove_all"
             android:layout_width="wrap_content"
@@ -38,11 +42,12 @@
             android:textAllCaps="false" />
 
         <jamesfchen.widget.kk.PagerView
+            android:orientation="vertical"
             android:id="@+id/pv_horizontal2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:background="@color/colorAccent"
-            app:pv_orientation="horizontal" />
+            />
     </LinearLayout>
-</androidx.core.widget.NestedScrollView>
+<!--</androidx.core.widget.NestedScrollView>-->
