--- a/components/hotel-module/bundle2/src/main/res/layout/item_nest.xml
+++ b/components/hotel-module/bundle2/src/main/res/layout/item_nest.xml
@@ -4,5 +4,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rv_nest"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     />
