--- a/components/hotel-module/bundle2/src/main/res/layout/activity_viewpager.xml
+++ b/components/hotel-module/bundle2/src/main/res/layout/activity_viewpager.xml
@@ -19,6 +19,10 @@
     <!--            android:layout_height="300dp"-->
     <!--            android:layout_gravity="center"-->
     <!--            />-->
-
+    <com.jamesfchen.bundle2.carousel.ViewFlipper2
+        android:id="@+id/vf_vf2"
+        android:layout_width="244dp"
+        android:layout_height="200dp"
+        android:animateFirstView="true" />
 
 </FrameLayout>
