--- a/components/hotel-module/bundle2/src/main/res/layout/activity_constraintlayout.xml
+++ b/components/hotel-module/bundle2/src/main/res/layout/activity_constraintlayout.xml
@@ -19,7 +19,8 @@
         app:layout_constraintLeft_toLeftOf="@+id/container"
         app:layout_constraintRight_toRightOf="@+id/container"
         app:layout_constraintTop_toTopOf="@+id/container"
-        app:layout_constraintVertical_bias="0.0"/>
+        app:layout_constraintVertical_bias="0.0"
+        />
 
     <ImageView
         android:id="@+id/favorite"
@@ -34,7 +35,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/container"
         app:layout_constraintRight_toRightOf="@+id/container"
         app:layout_constraintTop_toTopOf="@+id/container"
-        app:layout_constraintVertical_bias="0.19"/>
+        app:layout_constraintVertical_bias="0.19"
+        />
 
     <TextView
         android:id="@+id/title"
