--- a/components/home-module/myhome/src/main/res/layout/fragment_infos.xml
+++ b/components/home-module/myhome/src/main/res/layout/fragment_infos.xml
@@ -1,15 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".screen.InfosFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <data>
+
+        <variable
+            name="viewmodel"
+            type="com.jamesfchen.myhome.screen.notification.InfosViewModel" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="您有一条新消息，请注意查收" />
+        tools:context=".screen.notification.InfosFragment">
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/tv_notification"
+            android:layout_width="wrap_content"
+            android:layout_height="19dp"
+            android:background="@color/apricot"
+            android:gravity="center"
+            android:text="@{viewmodel.notification}"
+            app:layout_constraintBottom_toTopOf="@id/myTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="spread"
+            tools:text="adsfasdf" />
+
+        <com.jamesfchen.myhome.screen.notification.MyTextView
+            android:id="@+id/myTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_notification"
+            app:layout_constraintBottom_toBottomOf="parent"
+            poem="@={viewmodel.notification}"
+            tools:text="adsfasdf" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
