--- a/components/home-module/myhome/src/main/res/layout/fragment_profile.xml
+++ b/components/home-module/myhome/src/main/res/layout/fragment_profile.xml
@@ -8,8 +8,9 @@
     tools:context=".screen.profile.ProfileFragment">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:background="@color/apricot"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:gravity="center"
         android:text="profile " />
     <Button
@@ -17,4 +18,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="settings"/>
+    <Button
+        android:textAllCaps="false"
+        android:id="@+id/bt_inflate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="inflate viewstub"/>
+    <ViewStub
+        android:id="@+id/something_viewstub"
+        android:layout_width="wrap_content"
+        android:layout="@layout/viewstub_tag_sample"
+        android:layout_height="wrap_content"/>
+
+    <include android:id="@+id/something_include"
+        layout="@layout/include_tag_sample"/>
 </LinearLayout>
