--- a/components/home-module/myhome/src/main/res/layout/activity_webview.xml
+++ b/components/home-module/myhome/src/main/res/layout/activity_webview.xml
@@ -5,11 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="web"
+        android:src="@drawable/jack_beach"
         app:layout_constraintBottom_toTopOf="@+id/wv"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
