--- a/android/components/account-module/main/src/main/res/layout/activity_main.xml
+++ b/android/components/account-module/main/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
         android:id="@+id/wx_pay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="微信支付"
+        android:text="微信分享、支付等"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
