--- a/android/framework/baseui/src/main/res/values/colors.xml
+++ b/android/framework/baseui/src/main/res/values/colors.xml
@@ -7,4 +7,16 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="colorPrimary">@color/primary_material_light</color>
+    <color name="colorPrimaryDark">@color/primary_dark_material_light</color>
+    <color name="colorAccent">@color/accent_material_light</color>
+
+    <color name="apricot">#ffa86a</color>
+    <color name="afasf">#d6d7d7</color>
+    <color name="lightGreyBlue">#9cb3dd</color>
+    <color name="bottom_navigation_colors">#9cb3dd</color>
+
+    <color name="collapse_blue">#90A7E3</color>
+    <color name="b44">#444444</color>
 </resources>
