--- a/android/components/account-module/impl/src/main/res/layout/activity_signin.xml
+++ b/android/components/account-module/impl/src/main/res/layout/activity_signin.xml
@@ -8,7 +8,7 @@
               android:paddingTop="@dimen/activity_vertical_margin"
               android:paddingRight="@dimen/activity_horizontal_margin"
               android:paddingBottom="@dimen/activity_vertical_margin"
-              tools:context="com.jamesfchen.login.signin.SignInActivity">
+              tools:context="com.jamesfchen.login.SignInActivity">
 
     <ScrollView
         android:id="@+id/sc_signin_form"
