--- a/android/framework/base/src/main/res/layout/activity_recoder.xml
+++ b/android/framework/base/src/main/res/layout/activity_recoder.xml
@@ -96,7 +96,7 @@
 <!--            android:id="@+id/vv_video"-->
 <!--            android:layout_width="match_parent"-->
 <!--            android:layout_height="200dp" />-->
-        <com.jamesfchen.av.video.ChaplinVideoView
+        <com.jamesfchen.av.player.ChaplinVideoView
             android:id="@+id/clv_video"
             android:layout_width="match_parent"
             android:layout_height="200dp" />
