--- a/android/framework/base/src/main/res/values/attrs.xml
+++ b/android/framework/base/src/main/res/values/attrs.xml
@@ -28,4 +28,13 @@
         <attr name="availableCollapse" format="boolean"/>
         <attr name="contentMaxLine" format="integer"/>
     </declare-styleable>
+
+    <!-- Declare custom theme attributes that allow changing which styles are
+     used for button bars depending on the API level.
+     ?android:attr/buttonBarStyle is new as of API 11 so this is
+     necessary to support previous API levels. -->
+    <declare-styleable name="ChaplinVideoView">
+        <attr name="shortVideo" format="reference"/>
+    </declare-styleable>
+
 </resources>
