--- a/android/components/home-module/src/main/res/layout/activity_gallery.xml
+++ b/android/components/home-module/src/main/res/layout/activity_gallery.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <com.jamesfchen.myhome.widget.GalleryView
+    <com.jamesfchen.myhome.widget.gallery.GalleryView
         android:id="@+id/rv_gallery"
         android:layout_width="match_parent"
         android:layout_height="0dp"
