--- a/android/components/home-module/src/main/res/layout/fragment_video_list.xml
+++ b/android/components/home-module/src/main/res/layout/fragment_video_list.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <Button
+        android:id="@+id/bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
