--- a/android/components/home-module/src/main/res/menu/menu_screen.xml
+++ b/android/components/home-module/src/main/res/menu/menu_screen.xml
@@ -9,9 +9,9 @@
         android:id="@+id/dest_new_feeds"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="朋友圈" />
-    <item
-        android:id="@+id/dest_editor"
-        android:icon="@drawable/ic_baseline_add_24" />
+<!--    <item-->
+<!--        android:id="@+id/dest_editor"-->
+<!--        android:icon="@drawable/ic_baseline_add_24" />-->
     <item
         android:id="@+id/dest_infos"
         android:icon="@drawable/ic_notifications_black_24dp"
@@ -21,5 +21,8 @@
         android:id="@+id/dest_profile"
         android:icon="@drawable/ic_person_black_24dp"
         android:title="我" />
-
+    <item
+        android:id="@+id/dest_windows"
+        android:icon="@drawable/ic_window_24"
+        android:title="多窗口" />
 </menu>
