--- a/android/components/home-module/src/main/res/navigation/nav_screen.xml
+++ b/android/components/home-module/src/main/res/navigation/nav_screen.xml
@@ -17,6 +17,21 @@
 <!--        <action-->
 <!--            android:id="@+id/action_profile"-->
 <!--            app:destination="@+id/dest_profile" />-->
+        <action
+            android:id="@+id/action_webview"
+            app:destination="@+id/dest_webview"
+            app:popUpTo="@+id/dest_home"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/dest_webview"
+        android:name="com.jamesfchen.h5container.WebViewFragment"
+        android:label="fragment_webview"
+        tools:layout="@layout/fragment_webview">
+        <argument
+            android:name="url"
+            android:defaultValue="https://www.baidu.com"
+            />
     </fragment>
     <fragment
         android:id="@+id/dest_new_feeds"
@@ -49,7 +64,12 @@
             android:id="@+id/action_change_icon"
             app:destination="@+id/dest_change_icon" />
     </fragment>
-
+    <fragment
+        android:id="@+id/dest_windows"
+        android:name="com.jamesfchen.myhome.screen.window.WindowFragment"
+        android:label="fragment_window"
+        tools:layout="@layout/fragment_window">
+    </fragment>
     <activity
         android:id="@+id/dest_settings"
         android:name="com.jamesfchen.h5container.WebViewActivity"
