--- a/android/components/home-module/src/main/res/layout/welcome_fragment.xml
+++ b/android/components/home-module/src/main/res/layout/welcome_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".splash.welcome.WelcomeFragment">
+    tools:context=".screen.welcome.WelcomeFragment">
 
     <TextView
         android:layout_width="match_parent"
