--- a/android/base/src/main/res/layout/activity_webview.xml
+++ b/android/base/src/main/res/layout/activity_webview.xml
@@ -4,13 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="web"
-        android:src="@drawable/jack_beach"
+        android:src="@drawable/tmp"
         app:layout_constraintBottom_toTopOf="@+id/wv"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
