--- a/components/hotel-module/bundle2/src/main/res/layout/fragment_infos.xml
+++ b/components/hotel-module/bundle2/src/main/res/layout/fragment_infos.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewmodel"
-            type="com.jamesfchen.main.InfosViewModel" />
+            type="com.jamesfchen.bundle2.InfosViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
