--- a/components/hotel-module/bundle2/src/main/res/navigation/main_page_navigation_graph.xml
+++ b/components/hotel-module/bundle2/src/main/res/navigation/main_page_navigation_graph.xml
@@ -6,6 +6,6 @@
 
     <fragment
         android:id="@+id/nav_infos"
-        android:name="com.jamesfchen.main.InfosFragment" />
+        android:name="com.jamesfchen.bundle2.InfosFragment" />
 
 </navigation>
