--- a/components/home-module/src/main/res/menu/menu_screen.xml
+++ b/components/home-module/src/main/res/menu/menu_screen.xml
@@ -5,10 +5,10 @@
         android:icon="@drawable/ic_home_black_24dp"
         android:title="首页" />
 
-    <item
-        android:id="@+id/dest_new_feeds"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="朋友圈" />
+<!--    <item-->
+<!--        android:id="@+id/dest_feeds"-->
+<!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
+<!--        android:title="信息流" />-->
 <!--    <item-->
 <!--        android:id="@+id/dest_editor"-->
 <!--        android:icon="@drawable/ic_baseline_add_24" />-->
