--- a/base/src/main/res/layout/activity_webview.xml
+++ b/base/src/main/res/layout/activity_webview.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@id/title"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/tmp"
