--- a/base/src/main/res/layout/activity_webview.xml
+++ b/base/src/main/res/layout/activity_webview.xml
@@ -7,7 +7,7 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/tmp"
         android:text="web"
@@ -21,10 +21,18 @@
         android:id="@+id/gl_surface_view"
         android:layout_width="match_parent"
         android:layout_height="600dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
+
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/lpi"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.jamesfchen.h5container.PWebView
         android:id="@+id/wv"
