--- a/components/home-module/src/main/assets/test.html
+++ b/components/home-module/src/main/assets/test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="">
 <head>
     <meta charset="utf-8">
     <title>this is title</title>
@@ -12,9 +12,18 @@
             alert("calling from native")
             return "sbs"
         }
+        function openDetail(){
+<!--            window.location.href= "ispacecraft://a.spacecraft.com";-->
+            window.location.href= "ispacecraft://www.spacecraft.com/web/";
+        }
+
     </script>
 </head>
 <body>
+
 <button type="button" id="bt" onclick="onClick()">call to native</button>
+<button type="button" id="bt2" onclick="openDetail()">open detail page</button>
+
+<!--<a href="ispacecraft://a.spacecraft.com">open detail page</a>-->
 </body>
 </html>
