--- a/components/home-module/src/main/assets/test.html
+++ b/components/home-module/src/main/assets/test.html
@@ -13,8 +13,8 @@
             return "sbs"
         }
         function openDetail(){
-<!--            window.location.href= "ispacecraft://a.spacecraft.com";-->
-            window.location.href= "ispacecraft://www.spacecraft.com/web/";
+            window.location.href= "ispacecraft://a.spacecraft.com";
+<!--            window.location.href= "ispacecraft://www.spacecraft.com/web/";-->
         }
 
     </script>
@@ -24,6 +24,6 @@
 <button type="button" id="bt" onclick="onClick()">call to native</button>
 <button type="button" id="bt2" onclick="openDetail()">open detail page</button>
 
-<!--<a href="ispacecraft://a.spacecraft.com">open detail page</a>-->
+<a href="ispacecraft://a.spacecraft.com">open detail page</a>
 </body>
 </html>
