--- a/components/home-module/src/main/res/navigation/nav_screen.xml
+++ b/components/home-module/src/main/res/navigation/nav_screen.xml
@@ -76,7 +76,7 @@
     </fragment>
     <fragment
         android:id="@+id/dest_bundle2"
-        android:name="com.jamesfchen.bundle2.Bundle2Fragment"
+        android:name="com.jamesfchen.bundle2.page.Bundle2Fragment"
         android:label="fragment_bundle2">
     </fragment>
 
