--- a/components/hotel-module/bundle2/src/main/res/layout/activity_coordinatorlayout.xml
+++ b/components/hotel-module/bundle2/src/main/res/layout/activity_coordinatorlayout.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context="com.jamesfchen.myhome.widget.newLayoutExprimental.CoordinatorLayoutActivity">
+    tools:context="com.jamesfchen.bundle2.page.customview.newLayoutExprimental.CoordinatorLayoutActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/abl"
@@ -18,7 +18,7 @@
         app:liftOnScroll="true"
         tools:expanded="false">
 
-        <com.jamesfchen.bundle2.customview.newLayoutExprimental.coordinator.CollapsingBarsLayout
+        <com.jamesfchen.bundle2.page.customview.newLayoutExprimental.coordinator.CollapsingBarsLayout
             android:id="@+id/ctbl"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -57,7 +57,7 @@
                 app:title="title" />
 
 
-        </com.jamesfchen.bundle2.customview.newLayoutExprimental.coordinator.CollapsingBarsLayout>
+        </com.jamesfchen.bundle2.page.customview.newLayoutExprimental.coordinator.CollapsingBarsLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
