--- a/components/hotel-module/bundle2/src/main/res/layout/activity_drawable.xml
+++ b/components/hotel-module/bundle2/src/main/res/layout/activity_drawable.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jamesfchen.bundle2.drawable.DrawableActivity">
+    tools:context="com.jamesfchen.bundle2.page.feedback.DrawableActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
