--- a/components/home-module/src/main/res/menu/menu_screen.xml
+++ b/components/home-module/src/main/res/menu/menu_screen.xml
@@ -5,13 +5,13 @@
         android:icon="@drawable/ic_home_black_24dp"
         android:title="首页" />
 
-<!--    <item-->
-<!--        android:id="@+id/dest_feeds"-->
-<!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
-<!--        android:title="信息流" />-->
-<!--    <item-->
-<!--        android:id="@+id/dest_editor"-->
-<!--        android:icon="@drawable/ic_baseline_add_24" />-->
+    <item
+        android:id="@+id/dest_feeds"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="信息流" />
+    <!--    <item-->
+    <!--        android:id="@+id/dest_editor"-->
+    <!--        android:icon="@drawable/ic_baseline_add_24" />-->
     <item
         android:id="@+id/dest_infos"
         android:icon="@drawable/ic_notifications_black_24dp"
@@ -21,10 +21,10 @@
         android:id="@+id/dest_profile"
         android:icon="@drawable/ic_person_black_24dp"
         android:title="我" />
-<!--    <item-->
-<!--        android:id="@+id/dest_windows"-->
-<!--        android:icon="@drawable/ic_window_24"-->
-<!--        android:title="多窗口" />-->
+    <!--    <item-->
+    <!--        android:id="@+id/dest_windows"-->
+    <!--        android:icon="@drawable/ic_window_24"-->
+    <!--        android:title="多窗口" />-->
 
     <item
         android:id="@+id/dest_bundle2"
