--- a/components/hotel-module/bundle2/src/main/res/navigation/nav_bundle2.xml
+++ b/components/hotel-module/bundle2/src/main/res/navigation/nav_bundle2.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:startDestination="@id/nav_infos"
-    android:id="@+id/main_page_navigation_graph">
+    android:id="@+id/nav_bundle2"
+    app:startDestination="@id/nav_infos">
 
     <fragment
         android:id="@+id/nav_infos"
